# presentation_code

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  all_any_none.cpp  build.sh  employee.cpp  employee.h  exception_example.cpp  exception_example.h  modifying_sequence_operations.cpp  not_exception_safe.cpp  numeric_operations.cpp  person.cpp  person.h  raii.cpp  sort_partition_operations.cpp
